# bittorent

./: CMakeLists.txt  README  TODO
include/bencode/: test.c
src/: bit.h  main.c  optparser.c  readfile.c
torrents/: archlinux_basic.torrent  archlinux_rogue.torrent  archlinux_seed.torrent  archlinux_slow_disconnect.torrent  archlinux_split.torrent  beej_basic.torrent  beej_rogue.torrent  beej_seed.torrent  beej_slow_disconnect.torrent  beej_split.torrent  images_basic.torrent  images_rogue.torrent  images_seed.torrent  images_slow_disconnect.torrent  images_split.torrent
